traversal.zigzag.traversalzigzag.TraversalZigZag.scala.code
def estPosiFin():Boolean={
  if(getX()+1==getMondeHauteur() && getY()+1==getMondeLargeur()){return true}
	return false}

def avanceCrois(a:Boolean):Boolean={
  var x=getX()
  var y=getY()
	if(a){if(x+1>getMondeLargeur()){setPose(x,y+1);return false}
       setPose(x+1,y)
        return true}
  if(x==0){setPose(0,y+1);return true}
  setPose(x-1,y)
  return false}




override def run() {
  var mark=0
	Boolean a=true 
  do{ecritMessage(mark)
     mark=mark+1
     a=avanceCrois(a)}while(!estPosiFin())
  ecritMessage(mark)
}